Feature/references index (#8)
* updated index reference in memory

* Fixed item issues after reference changing

* Implemented flow for complex processes

* Simplified database tables

* Fixed flows and steps location

* Added validation based on mul files